[package]
name = "coppice-net"
description = "tonic service stubs for every Coppice gRPC surface: Raft transport, membership admin, and the agent session."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-proto.workspace = true
prost.workspace = true
tonic.workspace = true

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
tonic-build.workspace = true

[lints]
workspace = true
