[package]
name = "coppice-proto"
description = "Wire protocol types for the Coppice API and the agent-coordinator protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
serde.workspace = true

[lints]
workspace = true
