[package]
name = "coppice-proto"
description = "Wire protocol types for the Coppice API and the agent-coordinator protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-state.workspace = true
pbjson.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
prost-types.workspace = true
serde_json.workspace = true

[build-dependencies]
pbjson-build.workspace = true
prost.workspace = true
prost-build.workspace = true
protox.workspace = true

[lints]
workspace = true
