[package]
name = "coppice-scheduler"
description = "Asynchronous scheduler engine: bin packing, constraints, quotas, and reservations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
coppice-state.workspace = true

[dev-dependencies]
# Property tests for the ADR 0021 score formula and the zero-rejection
# scheduler↔apply contract; synthetic states drive the throughput test.
proptest.workspace = true
coppice-testkit.workspace = true
uuid.workspace = true

[lints]
workspace = true
