[package]
name = "coppice-state"
description = "Deterministic replicated state machine for the Coppice control plane."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-core.workspace = true
imbl.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Dev-only cycle: the determinism harness roundtrips snapshots through the
# real proto record path.
coppice-proto.workspace = true
proptest.workspace = true
prost.workspace = true
uuid.workspace = true

[lints]
workspace = true
