[package]
name = "coppice-testkit"
description = "Test and bench infrastructure: SimFs fault injection, the crash harness, and synthetic state generation. Dev-dependency only; never shipped."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
coppice-consensus.workspace = true
coppice-core.workspace = true
coppice-state.workspace = true
crc32c.workspace = true
# For building typed ids deterministically from the testkit Rng — never
# `Uuid::new_v4` in the generator, or seeds stop reproducing.
uuid.workspace = true

[lints]
workspace = true
